fix alignment, add flex, dockerize

--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,7 @@
   justify-content: center;
   align-content: center;
 }
+
+.App > div {
+  display: flex;
+}
