--- a/src/components/ProfilePic.css
+++ b/src/components/ProfilePic.css
@@ -1,11 +1,12 @@
 .ProfilePic {
-  margin: 60px;
   text-align: center;
+  justify-content: center;
 }
 
 .ProfilePic img {
   border-radius: 50%;
   overflow: hidden;
-  width: 33vw;
+  max-height: 90vh;
+  max-width: 50vw;
   height: auto;
 }
